--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                 <p class="about">Whether it's playing music or writing code, I am always creating. A drummer turned web dev, I feel that my musical background gives me a unique perspective on the tech industry. I love collaboration and creating as a team. Technologies I have experience with include Javascript, HTML, CSS, jQuery, NodeJS, Express, AngularJS, React, Ruby, Rails, Postgres and SQL.</p>
 
-                <p class="about">Currenty I work as a Front-End Developer at <a class="company-link" href="http://rationalagency.com/" target="_blank">Rational Interaction</a> in Seattle, WA. When I'm not coding you can find me playing music, enjoying the outdoors, or gaming.</p>
+                <p class="about"><!-- Currenty I work as a Front-End Developer at <a class="company-link" href="http://rationalagency.com/" target="_blank">Rational Interaction</a> in Seattle, WA. --> When I'm not coding you can find me playing music, enjoying the outdoors, or gaming.</p>
 
                 <p class="about tech-used">CURRENTLY LEARNING: VueJS, SCSS/LESS, ES6</p>
             </div>
