adding es6 pokemon app to projects

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="container">
                 <h2 class="work-header" id="work">Work</h2>
 
-                <div class="project-row row">
+              <!--   <div class="project-row row">
                     <div class="col-md-5">
                         <a href="http://www.microsoftpartnersolutions.com/" target="_blank"><img class="img-responsive project-img" src="img/work/modern_retailer.jpg" /></a>
                     </div>
@@ -124,7 +124,7 @@
 
                         <p class="tech-used">Tech Used: HTML5, LESS, JS, Bootstrap4, JQuery, VueJS, Handlebars, Gulp, Roots, Contentful, ParsleyJS</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="project-row row">
                     <div class="col-md-5">
@@ -139,6 +139,18 @@
                 </div>
 
                 <h2 class="work-header">Projects/For Fun</h2>
+
+                <div class="project-row row">
+                    <div class="col-md-5">
+                        <a href="https://pokemon-es6-app.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/pokemon.png" /></a>
+                    </div>
+                    <div class="project-content col-md-6">
+                        <h3>ES6 Pokemon App -<small><a class="project-links" href="https://github.com/TheCodingCarlson/pokemon_es6_app" target="_blank"> Github</a> | <a class="project-links" href="https://pokemon-es6-app.herokuapp.com/" target="_blank">Demo</a></small></h3>
+                        <p>A simple pokemon app that utilizes new technologies including ES6, Flexbox and new CSS3 features. Search for info on a specific Pokemon or build an effective team against certain types of Pokemon. Made using the <a class="project-links" href="https://pokeapi.co/">Pokemon API</a>. Features used include: arrow functions, const/let, promises (asynchronous API calls), spread operator, fetch, css variables, and fetch.</p>
+
+                         <p class="tech-used">Tech Used: HTML5, CSS3, JS(ES6), Handlebars, Node/Express</p>
+                    </div>
+                </div>
 
                 <!-- Linear Drum Beats -->
                 <div class="project-row row">
