updates readme, resume, and bio

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <!-- Font Awesome -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+    <!-- Emoji CSS -->
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
 
@@ -98,12 +101,16 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <img id="me" src="img/me.jpg" />
                 <h2>Who Am I?</h2>
-
-                <p class="about">Whether it's playing music or writing code, I am always creating. A drummer turned web dev, I feel that my musical background gives me a unique perspective on the tech industry. I love collaboration and creating as a team. Technologies I have experience with include Javascript, HTML, CSS, jQuery, NodeJS, Express, AngularJS, React, Ruby, Rails, Postgres and SQL.</p>
-
-                <p class="about"><!-- Currenty I work as a Front-End Developer at <a class="company-link" href="http://rationalagency.com/" target="_blank">Rational Interaction</a> in Seattle, WA. --> When I'm not coding you can find me playing music, enjoying the outdoors, or gaming.</p>
-
-                <p class="about tech-used">CURRENTLY LEARNING: VueJS, SCSS/LESS, ES6</p>
+                <p class="about">Whether it's playing music or writing code, I am always creating. A drummer turned web dev, I feel that my musical background gives me a unique perspective on the tech industry. I love collaboration and creating as a team. Technologies I have experience with include Javascript, HTML, CSS, jQuery, NodeJS, Express, React, Angular, Ruby, Rails, Postgres and SQL.</p>
+                <p class="about">When I'm not coding you can find me playing music, enjoying the outdoors, or gaming.</p>
+                <p class="about tech-used">
+                    <i class="em em-computer"></i>
+                    CURRENTLY LEARNING: ES2017, React, Webpack
+                </p>
+                <p class="about">
+                    <i class="em em-video_game"></i>
+                    CURRENTLY PLAYING: The Legend of Zelda: Breath of the Wild
+                </p>
             </div>
         </div>
     </section>
@@ -113,18 +120,6 @@
         <div class="download-section">
             <div class="container">
                 <h2 class="work-header" id="work">Work</h2>
-
-              <!--   <div class="project-row row">
-                    <div class="col-md-5">
-                        <a href="http://www.microsoftpartnersolutions.com/" target="_blank"><img class="img-responsive project-img" src="img/work/modern_retailer.jpg" /></a>
-                    </div>
-                    <div class="project-content col-md-6">
-                        <h3>The Modern Retailer -<small><a class="project-links" href="http://www.microsoftpartnersolutions.com/" target="_blank"> Live Site</a></small></h3>
-                        <p>A portal created to help direct business towards various MSFT partners. The site consists of a landing page, an assessment, and 6 partner pages. The assessment uses VueJS to dynamically take in user input and create percentages on how effective their business is in a certain category. I was responsible for the front-end code, making sure that the creative team's design came to life in a practical and meaningful way.</p>
-
-                        <p class="tech-used">Tech Used: HTML5, LESS, JS, Bootstrap4, JQuery, VueJS, Handlebars, Gulp, Roots, Contentful, ParsleyJS</p>
-                    </div>
-                </div> -->
 
                 <div class="project-row row">
                     <div class="col-md-5">
