content updates, removes DS store files, adds new images

--- a/index.html
+++ b/index.html
@@ -122,12 +122,11 @@
 
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://www.azure.microsoft.com/" target="_blank"><img class="img-responsive project-img" src="img/work/azure.png" /></a>
+                        <a href="https://www.azure.microsoft.com/" target="_blank"><img class="img-responsive project-img" src="img/work/azure.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Azure Marketing Website -<small><a class="project-links" href="https://www.azure.microsoft.com/" target="_blank"> Live Site</a></small></h3>
-
-                        <p>I worked on the dev team that owned this site and helped launch key projects including: The <a href="https://azure.microsoft.com/en-us/try/cognitive-services/" >Cognitive Services Try Experience</a>, <a href="http://azure.microsoft.com/training">Training</a>, and </p>
+                        <p>I was part the dev team that owned this site and helped launch key features including: The <a href="https://azure.microsoft.com/en-us/try/cognitive-services/" class="content-link">Cognitive Services Try Experience</a>, <a href="http://azure.microsoft.com/training" class="content-link">Training Section</a>, and <a href="https://azure.microsoft.com/solutions/architecture/onboarding-customers-with-a-cloud-native-serverless-architecture/" class="content-link">Solution Architecture</a> redesign. I contributed to many other areas of the site and created new components for Sundog, our in house front-end framework, that are used throughout. I was also part of an accessiblity team that was tasked with going through the entire site and updating as necessary to meet accessibility standards.</p> 
 
                         <p class="tech-used">Tech Used: C#, ASP.net, JS, jQuery, Razor, React</p>
                     </div>
@@ -150,12 +149,12 @@
                 <!-- React OMDB Movie Search App -->
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://react-omdb-movie-search.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/omdb.png" /></a>
+                        <a href="https://react-omdb-movie-search.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/omdb.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>React Movie Search App -<small><a class="project-links" href="https://github.com/TheCodingCarlson/react-omdb-app" target="_blank"> Github</a> | <a class="project-links" href="https://react-omdb-movie-search.herokuapp.com/" target="_blank">Demo</a></small></h3>
 
-                        <p>I created a few adaptations of this app during my time at <a class="project-links" href="https://generalassemb.ly/">General Assembly Seattle</a> and recently decided to create a React version using Babel, Webpack, and some new features of ES2017. It's a simple app that allows users to search the OMDB movie database using keywords. Each successful query returns up to 10 results. Users can then click on a result card to see more information on a particular film.</p>
+                        <p>I created a few adaptations of this app during my time at <a class="content-link" href="https://generalassemb.ly/">General Assembly Seattle</a> and recently decided to create a React version using Babel, Webpack, and some new features of ES2017. It's a simple app that allows users to search the OMDB movie database using keywords. Each successful query returns up to 10 results. Users can then click on a result card to see more information on a particular film.</p>
 
                          <p class="tech-used">Tech Used: React, Babel, Webpack, Materialize, Node/Express, OMDB API</p>
                     </div>
