updates azure image and image paths

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://www.azure.microsoft.com/" target="_blank"><img class="img-responsive project-img" src="img/work/azure.jpg" /></a>
+                        <a href="https://www.azure.microsoft.com/" target="_blank"><img class="img-responsive project-img" src="./img/work/azure.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Azure Marketing Website -<small><a class="project-links" href="https://www.azure.microsoft.com/" target="_blank"> Live Site</a></small></h3>
@@ -134,7 +134,7 @@
 
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://www.acer.com/ac/en/US/content/keep-asking" target="_blank"><img class="img-responsive project-img" src="img/work/acer.jpg" /></a>
+                        <a href="https://www.acer.com/ac/en/US/content/keep-asking" target="_blank"><img class="img-responsive project-img" src="./img/work/acer.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Acer Keep Asking -<small><a class="project-links" href="https://www.acer.com/ac/en/US/content/keep-asking" target="_blank"> Live Site</a></small></h3>
@@ -149,7 +149,7 @@
                 <!-- React OMDB Movie Search App -->
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://react-omdb-movie-search.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/omdb.jpg" /></a>
+                        <a href="https://react-omdb-movie-search.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="./img/work/omdb.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>React Movie Search App -<small><a class="project-links" href="https://github.com/TheCodingCarlson/react-omdb-app" target="_blank"> Github</a> | <a class="project-links" href="https://react-omdb-movie-search.herokuapp.com/" target="_blank">Demo</a></small></h3>
@@ -163,7 +163,7 @@
                 <!-- Pokemon ES6 App -->
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://pokemon-es6-app.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/pokemon.png" /></a>
+                        <a href="https://pokemon-es6-app.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="./img/work/pokemon.png" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>ES6 Pokemon App -<small><a class="project-links" href="https://github.com/TheCodingCarlson/pokemon_es6_app" target="_blank"> Github</a> | <a class="project-links" href="https://pokemon-es6-app.herokuapp.com/" target="_blank">Demo</a></small></h3>
@@ -176,7 +176,7 @@
                 <!-- Linear Drum Beats -->
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://linear-drumbeats.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/linear_drumbeats.jpg" /></a>
+                        <a href="https://linear-drumbeats.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="./img/work/linear_drumbeats.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Linear Drum Beats -<small><a class="project-links" href="https://github.com/TheCodingCarlson/linear-drumbeats" target="_blank"> Github</a> | <a class="project-links" href="https://linear-drumbeats.herokuapp.com/" target="_blank">Demo</a></small></h3>
@@ -189,7 +189,7 @@
                 <!-- Harmonize -->
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://harmonize2.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/harmonize.jpg" /></a>
+                        <a href="https://harmonize2.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="./img/work/harmonize.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Harmonize -<small><a class="project-links" href="https://github.com/TheCodingCarlson/harmonize" target="_blank"> Github</a> | <a class="project-links" href="https://harmonize2.herokuapp.com/" target="_blank">Demo</a></small></h3>
@@ -202,7 +202,7 @@
                 <!-- Bog Adventure -->
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://bog-adventure.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/bog_app.jpg" /></a>
+                        <a href="https://bog-adventure.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="./img/work/bog_app.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Bog Adventure -<small><a class="project-links" href="https://github.com/TheCodingCarlson/bog_adventure" target="_blank"> Github</a> | <a class="project-links" href="https://bog-adventure.herokuapp.com/" target="_blank">Demo</a></small></h3>
@@ -215,7 +215,7 @@
                 <!-- Hangman -->
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="http://thecodingcarlson.github.io/Hangman/" target="_blank"><img class="img-responsive project-img grayscale" src="img/work/hangman.jpg" /></a>
+                        <a href="http://thecodingcarlson.github.io/Hangman/" target="_blank"><img class="img-responsive project-img grayscale" src="./img/work/hangman.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Hangman -<small><a class="project-links" href="https://github.com/TheCodingCarlson/Hangman" target="_blank"> Github</a> | <a class="project-links" href="http://thecodingcarlson.github.io/Hangman/" target="_blank"> Demo</a></small></h3>
