updates image paths

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://www.azure.microsoft.com/" target="_blank"><img class="img-responsive project-img" src="./img/work/azure.jpg" /></a>
+                        <a href="https://www.azure.microsoft.com/" target="_blank"><img class="img-responsive project-img" src="./img/work/azure.JPG" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Azure Marketing Website -<small><a class="project-links" href="https://www.azure.microsoft.com/" target="_blank"> Live Site</a></small></h3>
@@ -149,7 +149,7 @@
                 <!-- React OMDB Movie Search App -->
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://react-omdb-movie-search.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="./img/work/omdb.jpg" /></a>
+                        <a href="https://react-omdb-movie-search.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="./img/work/omdb.JPG" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>React Movie Search App -<small><a class="project-links" href="https://github.com/TheCodingCarlson/react-omdb-app" target="_blank"> Github</a> | <a class="project-links" href="https://react-omdb-movie-search.herokuapp.com/" target="_blank">Demo</a></small></h3>
