removes pokemon project temporarily

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
                 <p class="about">When I'm not coding you can find me playing music, enjoying the outdoors, or gaming.</p>
                 <p class="about tech-used">
                     <i class="em em-computer"></i>
-                    CURRENTLY LEARNING: React, Babel, Webpack
+                    CURRENTLY LEARNING: React, Apollo, GraphQL
                 </p>
                 <p class="about">
                     <i class="em em-video_game"></i>
-                    CURRENTLY PLAYING: The Legend of Zelda: Breath of the Wild
+                    CURRENTLY PLAYING: Red Dead Redemption 2
                 </p>
             </div>
         </div>
@@ -161,7 +161,7 @@
                 </div>
 
                 <!-- Pokemon ES6 App -->
-                <div class="project-row row">
+                <!-- <div class="project-row row">
                     <div class="col-md-5">
                         <a href="https://pokemon-es6-app.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="./img/work/pokemon.png" /></a>
                     </div>
@@ -171,7 +171,7 @@
 
                          <p class="tech-used">Tech Used: HTML5, CSS3, JS(ES6), Handlebars, Node/Express</p>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Linear Drum Beats -->
                 <div class="project-row row">
