--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <img id="me" src="img/me.jpg" />
                 <h2>Who Am I?</h2>
-                <p class="about">Whether it's playing music or writing code, I am always creating. A drummer turned web dev, I feel that my musical background gives me a unique perspective on the tech industry. I love collaboration and creating as a team. Technologies I have experience with include Javascript, HTML, CSS, jQuery, NodeJS, Express, React, Angular, Ruby, Rails, Postgres and SQL.</p>
+                <p class="about">Whether it's playing music or writing code, I am always creating. A drummer turned web dev, I feel that my musical background helps me bring a unique perspective to every project I take on. I love collaboration and creating as a team. Technologies I have experience with include ASP.NET, C#, Javascript, HTML, CSS (SCSS and LESS), and React.</p>
                 <p class="about">When I'm not coding you can find me playing music, enjoying the outdoors, or gaming.</p>
                 <p class="about tech-used">
                     <i class="em em-computer"></i>
@@ -108,7 +108,7 @@
                 </p>
                 <p class="about">
                     <i class="em em-video_game"></i>
-                    CURRENTLY PLAYING: Red Dead Redemption 2
+                    CURRENTLY PLAYING: The Outer Worlds
                 </p>
             </div>
         </div>
@@ -126,21 +126,9 @@
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Azure Marketing Website -<small><a class="project-links" href="https://www.azure.microsoft.com/" target="_blank"> Live Site</a></small></h3>
-                        <p>I currently work on the dev team that owns this site and have helped launch key features including: The <a href="https://azure.microsoft.com/en-us/try/cognitive-services/" class="content-link">Cognitive Services Try Experience</a>, <a href="http://azure.microsoft.com/training" class="content-link">Training Section</a>, and <a href="https://azure.microsoft.com/solutions/architecture/onboarding-customers-with-a-cloud-native-serverless-architecture/" class="content-link">Solution Architecture</a> redesign. I contribute to many other areas of the site including Sundog, our in house front-end framework. I have created a large number of components for Sundog that are used throughout the whole project. I was also part of a team that was tasked with going through the entire site and updating as necessary to meet accessibility standards.</p>
+                        <p>I currently work on the dev team that owns this site and have helped launch key features including: The <a href="https://azure.microsoft.com/overview/" class="content-link" target="_blank">The Azure Overview Experience</a>, <a href="https://azure.microsoft.com/overview/azure-hybrid/" class="content-link" target="_blank">The Azure Hybrid Experience</a>, and our <a href="https://azure.microsoft.com/solutions/architecture/" class="content-link" target="_blank">Solution Architecture templating</a>. I also helped build Sundog, our in house front-end framework. This framework is now being consumed by other teams at Microsoft and I continue to contribute to and make improvements frequently. In addition, I help maintain a group of smaller sites that we own, like <a href="https://startups.microsoft.com/" class="content-link" target="_blank">Microsoft for Startups</a>.</p>
 
-                        <p class="tech-used">Tech Used: C#, ASP.net, JS, jQuery, Razor, React</p>
-                    </div>
-                </div>
-
-                <div class="project-row row">
-                    <div class="col-md-5">
-                        <a href="https://www.acer.com/ac/en/US/content/keep-asking" target="_blank"><img class="img-responsive project-img" src="./img/work/acer.jpg" /></a>
-                    </div>
-                    <div class="project-content col-md-6">
-                        <h3>Acer Keep Asking -<small><a class="project-links" href="https://www.acer.com/ac/en/US/content/keep-asking" target="_blank"> Live Site</a></small></h3>
-                        <p>Part of the Acer site, this section features articles written by tech-savvy moms that give parents advice on how to incorporate tech into family life. Other topics covered include tips for setting tech ground-rules with kids, fun tech ideas and video interviews. I was responsible for the redesign of the landing page and article pages, as well as writing the code for collapsing/expanding articles.</p>
-
-                        <p class="tech-used" id="last">Tech Used: HTML5, CSS3, JS, jQuery, Handlebars</p>
+                        <p class="tech-used">Tech Used: C#, ASP.NET, JS, jQuery, Razor, React, LESS</p>
                     </div>
                 </div>
 
@@ -161,7 +149,7 @@
                 </div>
 
                 <!-- Pokemon ES6 App -->
-                <!-- <div class="project-row row">
+                <div class="project-row row">
                     <div class="col-md-5">
                         <a href="https://pokemon-es6-app.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="./img/work/pokemon.png" /></a>
                     </div>
@@ -171,7 +159,7 @@
 
                          <p class="tech-used">Tech Used: HTML5, CSS3, JS(ES6), Handlebars, Node/Express</p>
                     </div>
-                </div> -->
+                </div>
 
                 <!-- Linear Drum Beats -->
                 <div class="project-row row">
@@ -186,34 +174,8 @@
                     </div>
                 </div>
 
-                <!-- Harmonize -->
-                <div class="project-row row">
-                    <div class="col-md-5">
-                        <a href="https://harmonize2.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="./img/work/harmonize.jpg" /></a>
-                    </div>
-                    <div class="project-content col-md-6">
-                        <h3>Harmonize -<small><a class="project-links" href="https://github.com/TheCodingCarlson/harmonize" target="_blank"> Github</a> | <a class="project-links" href="https://harmonize2.herokuapp.com/" target="_blank">Demo</a></small></h3>
-                        <p>A chord helper app that allows users to pick a starting note and chord quality, and from there suggests chords that make sense to go to next in a progression. I wanted to create a tool for people that know some chords, but aren't sure how to put them together in a practical and musical way. Users can save favorite progressions to their profile for future reference.</p>
-
-                        <p class="tech-used">Tech Used: HTML5, CSS3, JS, Bootstrap3, TeoriaJS, AngularJS, Express/NodeJS, MongoDB/Mongoose</p>
-                    </div>
-                </div>
-
-                <!-- Bog Adventure -->
-                <div class="project-row row">
-                    <div class="col-md-5">
-                        <a href="https://bog-adventure.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="./img/work/bog_app.jpg" /></a>
-                    </div>
-                    <div class="project-content col-md-6">
-                        <h3>Bog Adventure -<small><a class="project-links" href="https://github.com/TheCodingCarlson/bog_adventure" target="_blank"> Github</a> | <a class="project-links" href="https://bog-adventure.herokuapp.com/" target="_blank">Demo</a></small></h3>
-                        <p>A simple Ruby on Rails app with CRUD functionality. Users can create and edit bog creatures as well as add tags to each creature. Creatures and tags can also be deleted.</p>
-
-                         <p class="tech-used">Tech Used: HTML5, CSS3, Ruby, Ruby on Rails, Postgres</p>
-                    </div>
-                </div>
-
                 <!-- Hangman -->
-                <div class="project-row row">
+                <!-- <div class="project-row row">
                     <div class="col-md-5">
                         <a href="http://thecodingcarlson.github.io/Hangman/" target="_blank"><img class="img-responsive project-img grayscale" src="./img/work/hangman.jpg" /></a>
                     </div>
@@ -223,7 +185,7 @@
 
                         <p class="tech-used">Tech Used: HTML5, CSS3, JS, jQuery, Lazy Line Painter, Wordnik API</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
