--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Portfolio for Seattle based full-stack web developer, Chris Carlson">
-    <meta name="keywords" content="web development, web developer, full-stack, front-end, seattle, rational interaction, design, responsive web">
-    <meta name="author" content="Chris Carlson - Web Developer">
+    <meta name="description" content="Code portfolio for Seattle based Software Engineer, Chris Carlson">
+    <meta name="keywords" content="coder, programer, software engineer, web development, web developer, full-stack engineer, front-end, full-stack developer, seattle, design, responsive web">
+    <meta name="author" content="Chris Carlson - Software Engineer">
 
     <!-- Title and Favicon -->
-    <title>Chris Carlson - Web Dev</title>
+    <title>Chris Carlson - Creator of Things</title>
     <link rel="shortcut icon" type="image/x-icon" href="/img/laptop_favicon.png">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Philosopher&display=swap" rel="stylesheet">
 
     <!-- Font Awesome -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -47,7 +46,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                   <span class="light">Chris</span> Carlson
+                   Home
                 </a>
             </div>
 
@@ -62,7 +61,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#work">Work</a>
+                        <a class="page-scroll" href="#work">Code</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -83,8 +82,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h4 class="brand-heading">Hi, I'm Chris</h4>
-                        <p class="intro-text">Web Developer | Musician</p>
+                        <h4 class="brand-heading">Chris Carlson</h4>
+                        <p class="intro-text">Seattle-based Software Engineer</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -98,17 +97,20 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <img id="me" src="img/me.jpg" />
-                <h2>Who Am I?</h2>
-                <p class="about">Whether it's playing music or writing code, I am always creating. A drummer turned web dev, I feel that my musical background helps me bring a unique perspective to every project I take on. I love collaboration and creating as a team. Technologies I have experience with include ASP.NET, C#, Javascript, HTML, CSS (SCSS and LESS), and React.</p>
-                <p class="about">When I'm not coding you can find me playing music, enjoying the outdoors, or gaming.</p>
+                <img id="me" src="img/me.jpg" loading="lazy" alt="Chris Carlson - Software Engineer" />
+                <p class="about">Whether it's playing music or writing code, I am always creating. A drummer turned web dev, I feel that my musical background helps me bring a unique perspective to every project I take on. I love collaboration and creating as a team. Technologies I have experience with include ASP.NET, C#, Javascript, HTML, CSS and React.</p>
+                <p class="about">When I'm not coding you can find me playing music, enjoying the outdoors, cooking or gaming.</p>
                 <p class="about tech-used">
                     <i class="em em-computer"></i>
-                    CURRENTLY LEARNING: React, Apollo, GraphQL
+                    What am I learning?: .NET Core
                 </p>
                 <p class="about">
                     <i class="em em-video_game"></i>
-                    CURRENTLY PLAYING: The Outer Worlds
+                    What I am I playing?: Luigi's Mansion 3 <i class="em em-ghost" aria-role="presentation" aria-label="GHOST"></i>
+                </p>
+                <p class="about">
+                    <i class="em em-notes" aria-role="presentation" aria-label="MULTIPLE MUSICAL NOTES"></i>
+                    What I am I listening to?: <a href="https://open.spotify.com/album/61ouYBX1skZYiuv5EHnmEK" aria-label="Whitney - Candid">Whitney - Candid</a> and <a href="https://open.spotify.com/album/0pILyYJr65rEAWnogtd8Xt" aria-label="Ruston Kelly - Shape & Destroy">Ruston Kelly - Shape & Destroy</a>
                 </p>
             </div>
         </div>
