--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </section>
 
     <!-- Code Section -->
-    <section id="work" class="container-fluid content-section text-center content-section--code" aria-label="Coding Work and Projects">
+    <section id="work" class="content-section text-center content-section--code" aria-label="Coding Work and Projects">
         <div class="container">
             <h2 id="work">Professional</h2>
 
@@ -130,22 +130,43 @@
             <div class="project-row row">
                 <div class="col-md-5">
                     <a class="card-img" href="https://www.azure.microsoft.com/" target="_blank">
-                        <img class="img-responsive project-img" src="./img/work/azure.JPG" loading="lazy" alt="Microsoft Azure Website" />
+                        <img class="img-responsive project-img" src="./img/work/azure.PNG" loading="lazy" alt="Microsoft Azure Website" />
                         <div class="details">
-                            <span class="text">Let's Go!</span>
+                            <span class="text">View site</span>
                         </div>
                     </a>
                 </div>
 
                 <div class="project-content col-md-6">
-    
                     <h3>Azure Marketing Website</h3>
 
                     <p><a class="project-link" href="https://www.azure.microsoft.com/" target="_blank">Live Site</a></p>
 
-                    <p>I currently work on the dev team that owns this site and have helped launch key features including: The <a href="https://azure.microsoft.com/overview/" class="content-link" target="_blank">The Azure Overview Experience</a>, <a href="https://azure.microsoft.com/overview/azure-hybrid/" class="content-link" target="_blank">The Azure Hybrid Experience</a>, and our <a href="https://azure.microsoft.com/solutions/architecture/" class="content-link" target="_blank">Solution Architecture templating</a>. I also helped build Sundog, our in house front-end framework. This framework is now being consumed by other teams at Microsoft and I continue to contribute to and make improvements frequently. In addition, I help maintain a group of smaller sites that we own, like <a href="https://startups.microsoft.com/" class="content-link" target="_blank">Microsoft for Startups</a>.</p>
+                    <p>I have been working on the dev team that owns this site since March of 2017. My recent contributions include the development and launch of the <a href="https://azure.microsoft.com/products/azure-stack/hci/catalog/" target="_blank">Azure Stack HCI Product Catalog</a> as well as other custom features on the site. I am a major contributor to Sundog; our front-end framework and component library that was built in-house. This framework is now used by other teams at Microsoft and I continue to make improvements continuously. In addition, I help maintain a group of smaller sites that we own, like <a href="https://startups.microsoft.com/" target="_blank">Microsoft for Startups</a>.</p>
 
-                    <p>Tech Used: C#, ASP.net, JS, jQuery, Razor, React, Less</p>
+                    <p>Tech Used: C#, ASP.NET, JS, React, Razor, Less</p>
+                </div>
+            </div>
+
+            <!-- Rational Interaction -->
+            <div class="project-row row">
+                <div class="col-md-5">
+                    <a class="card-img" href="https://www.rationalagency.com/" target="_blank">
+                        <img class="img-responsive project-img" src="./img/work/rational-interaction.PNG" loading="lazy" alt="Rational Interaction" />
+                        <div class="details">
+                            <span class="text">View site</span>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="project-content col-md-6">
+                    <h3>Rational Interaction</h3>
+
+                    <p><a class="project-link" href="https://www.azure.microsoft.com/" target="_blank">Live Site</a></p>
+
+                    <p>I worked as a Junior Web Developer at Rational Interaction from May of 2016 through January of 2017. Rational is a Seattle based marketing agency focused on creating impactful business solutions for various clients. During my time there, I worked on web apps for Acer Computers, The Seattle Seahawks and Microsoft. My responsibilities involved adding new UI features to these projects as well integrating new tech into our stack.</p>
+
+                    <p>Tech Used: JS, HTML, CSS, Node/Express, Vue, Less/Sass, Handlebars</p>
                 </div>
             </div>
 
@@ -157,7 +178,7 @@
                     <a class="card-img" href="https://react-omdb-movie-search.herokuapp.com/" target="_blank">
                         <img class="img-responsive project-img" src="./img/work/omdb.JPG" loading="lazy" alt="React Movie Search App" />
                         <div class="details">
-                            <span class="text">Let's Go!</span>
+                            <span class="text">View site</span>
                         </div>
                     </a>
                 </div>
@@ -166,7 +187,7 @@
 
                     <p><a class="project-link" href="https://github.com/TheCodingCarlson/react-omdb-app" target="_blank">Code</a> | <a class="project-link" href="https://react-omdb-movie-search.herokuapp.com/" target="_blank">Demo</a></p>
 
-                    <p>I created a few adaptations of this app during my time at <a class="content-link" href="https://generalassemb.ly/">General Assembly Seattle</a> and recently decided to create a React version using Babel, Webpack, and some new features of ES2017. It's a simple app that allows users to search the OMDB movie database using keywords. Each successful query returns up to 10 results. Users can then click on a result card to see more information on a particular film.</p>
+                    <p>I created a few adaptations of this app during my time at <a href="https://generalassemb.ly/">General Assembly Seattle</a> and recently decided to create a React version using Babel, Webpack, and some new features of ES2017. It's a simple app that allows users to search the OMDB movie database using keywords. Each successful query returns up to 10 results. Users can then click on a result card to see more information on a particular film.</p>
 
                     <p>Tech Used: React, Babel, Webpack, Materialize, Node/Express, OMDB API</p>
                 </div>
@@ -178,7 +199,7 @@
                     <a class="card-img" href="https://pokemon-es6-app.herokuapp.com/" target="_blank">
                         <img class="img-responsive project-img" src="./img/work/pokemon.png" loading="lazy" alt="ES6 Pokemon App" />
                         <div class="details">
-                            <span class="text">Let's Go!</span>
+                            <span class="text">View site</span>
                         </div>
                     </a>
                 </div>
