--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="container-fluid content-section text-center content-section--about" aria-label="About Chris Carlson">
+    <section id="about" class="container-fluid content-section content-section--light text-center content-section--about" aria-label="About Chris Carlson">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <img id="me" src="img/me.jpg" loading="lazy" alt="Chris Carlson - Software Engineer" />
+                <img id="me" src="img/me.jpg" alt="Chris Carlson - Software Engineer" />
 
                 <p>Whether it's playing music or writing code, I am always creating. A drummer turned web dev, I feel that my musical background helps me bring a unique perspective to every project I take on. I love collaboration and creating as a team. Technologies I have experience with include ASP.NET, C#, Javascript, HTML, CSS and React.</p>
 
@@ -110,11 +110,11 @@
 
                 <p>
                     <i class="em em-video_game"></i>
-                    What I am I playing? Luigi's Mansion 3 <i class="em em-ghost" aria-role="presentation" aria-label="GHOST"></i>
+                    What I am I playing? Luigi's Mansion 3 <i class="em em-ghost" aria-label="ghost"></i>
                 </p>
 
                 <p>
-                    <i class="em em-notes" aria-role="presentation" aria-label="MULTIPLE MUSICAL NOTES"></i>
+                    <i class="em em-notes" aria-label="multiple musical notes"></i>
                     What I am I listening to? <a href="https://open.spotify.com/album/61ouYBX1skZYiuv5EHnmEK" aria-label="Whitney - Candid">Whitney - Candid</a> and <a href="https://open.spotify.com/album/0pILyYJr65rEAWnogtd8Xt" aria-label="Ruston Kelly - Shape & Destroy">Ruston Kelly - Shape & Destroy</a>
                 </p>
             </div>
@@ -122,15 +122,15 @@
     </section>
 
     <!-- Code Section -->
-    <section id="work" class="content-section text-center content-section--code" aria-label="Coding Work and Projects">
+    <section id="work" class="content-section content-section--dark text-center content-section--code" aria-label="Coding Work and Projects">
         <div class="container">
-            <h2 id="work">Professional</h2>
+            <h2>Professional</h2>
 
             <!-- Microsoft Azure -->
             <div class="project-row row">
                 <div class="col-md-5">
                     <a class="card-img" href="https://www.azure.microsoft.com/" target="_blank">
-                        <img class="img-responsive project-img" src="./img/work/azure.PNG" loading="lazy" alt="Microsoft Azure Website" />
+                        <img class="img-responsive project-img" src="./img/work/azure.PNG" alt="Microsoft Azure Website" />
                         <div class="details">
                             <span class="text">View site</span>
                         </div>
@@ -152,7 +152,7 @@
             <div class="project-row row">
                 <div class="col-md-5">
                     <a class="card-img" href="https://www.rationalagency.com/" target="_blank">
-                        <img class="img-responsive project-img" src="./img/work/rational-interaction.PNG" loading="lazy" alt="Rational Interaction" />
+                        <img class="img-responsive project-img" src="./img/work/rational-interaction.PNG" alt="Rational Interaction" />
                         <div class="details">
                             <span class="text">View site</span>
                         </div>
@@ -176,7 +176,7 @@
             <div class="project-row row">
                 <div class="col-md-5">
                     <a class="card-img" href="https://react-omdb-movie-search.herokuapp.com/" target="_blank">
-                        <img class="img-responsive project-img" src="./img/work/omdb.JPG" loading="lazy" alt="React Movie Search App" />
+                        <img class="img-responsive project-img" src="./img/work/omdb.JPG" alt="React Movie Search App" />
                         <div class="details">
                             <span class="text">View site</span>
                         </div>
@@ -197,7 +197,7 @@
             <div class="project-row row">
                 <div class="col-md-5">
                     <a class="card-img" href="https://pokemon-es6-app.herokuapp.com/" target="_blank">
-                        <img class="img-responsive project-img" src="./img/work/pokemon.png" loading="lazy" alt="ES6 Pokemon App" />
+                        <img class="img-responsive project-img" src="./img/work/pokemon.png" alt="ES6 Pokemon App" />
                         <div class="details">
                             <span class="text">View site</span>
                         </div>
@@ -208,16 +208,16 @@
 
                     <p><a class="project-link" href="https://github.com/TheCodingCarlson/pokemon_es6_app" target="_blank">Code</a> | <a class="project-link" href="https://pokemon-es6-app.herokuapp.com/" target="_blank">Demo</a></p>
 
-                    <p>A simple pokemon app that utilizes new technologies including ES6, Flexbox and new CSS3 features. Search for info on a specific Pokemon or build an effective team against certain types of Pokemon. Made using the <a class="project-links" href="https://pokeapi.co/">Pokemon API</a>. Features used include: arrow functions, const/let, promises (asynchronous API calls), spread operator, fetch, css variables, and fetch.</p>
+                    <p>A simple pokemon app that utilizes new technologies including ES6, Flexbox and new CSS3 features. Search for info on a specific Pokemon or build an effective team against certain types of Pokemon. Made using the <a class="project-links" href="https://pokeapi.co/">Pokemon API</a>. Features used include: arrow functions, const/let, promises (asynchronous API calls), spread operator, fetch, CSS variables, and fetch.</p>
 
-                    <p>Tech Used: HTML, CSS, JS(ES6), Handlebars, Node/Express</p>
+                    <p>Tech Used: HTML, CSS, JS, Handlebars, Node/Express</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="container-fluid content-section text-center content-section--contact" aria-label="Contact information">
+    <section id="contact" class="container-fluid content-section text-center content-section--light content-section--contact" aria-label="Contact information">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact</h2>
@@ -240,9 +240,12 @@
     </section>
 
     <!-- Footer -->
-    <footer>
+    <footer class="content-section--light">
         <div class="container text-center">
             <p>Copyright &copy; <span id="currentYear"></span> Chris Carlson</p>
+            <p>
+                <a class="link--small" href="https://www.freepik.com/vectors/background">Background vector created by freepik - www.freepik.com</a>
+            </p>
         </div>
     </footer>
 
