--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 
                 <p>
                     <i class="em em-video_game"></i>
-                    What I am I playing? Luigi's Mansion 3 <i class="em em-ghost" aria-label="ghost"></i>
+                    What am I playing? Luigi's Mansion 3 <i class="em em-ghost" aria-label="ghost"></i>
                 </p>
 
                 <p>
                     <i class="em em-notes" aria-label="multiple musical notes"></i>
-                    What I am I listening to? <a href="https://open.spotify.com/album/61ouYBX1skZYiuv5EHnmEK" aria-label="Whitney - Candid">Whitney - Candid</a> and <a href="https://open.spotify.com/album/0pILyYJr65rEAWnogtd8Xt" aria-label="Ruston Kelly - Shape & Destroy">Ruston Kelly - Shape & Destroy</a>
+                    What am I listening to? <a href="https://open.spotify.com/album/61ouYBX1skZYiuv5EHnmEK" aria-label="Whitney - Candid">Whitney - Candid</a> and <a href="https://open.spotify.com/album/0pILyYJr65rEAWnogtd8Xt" aria-label="Ruston Kelly - Shape & Destroy">Ruston Kelly - Shape & Destroy</a>
                 </p>
             </div>
         </div>
